<resources>
    <string name="app_name">Todos</string>
    <string name="add_to_do">Add new todo</string>
    <string name="add">Add</string>
    <string name="clear_done">Clear Done Items</string>
    <string name="no_todos">You\'ve no todos, create your first one</string>
</resources>